scripts/nullaway/original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8.txt
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/Product.java:27: error: [NullAway] initializer method does not guarantee @NonNull field discount (line 17) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Product(String id, String description, String department, double unitPrice) {
           ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/Product.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
	this.discount = null;
	              ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/sales/BasicSale.java:26: error: [NullAway] initializer method does not guarantee @NonNull field customer (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public BasicSale () {
           ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/sales/BasicSale.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
	customer = null;
	         ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/input/FakeRegisterInput.java:99: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	    return null;
	    ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/customer/PreferredCustomer.java:28: error: [NullAway] initializer method does not guarantee @NonNull field discount (line 26) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PreferredCustomer(String id, String name) {
           ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/customer/PreferredCustomer.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
	discount = null;
	         ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/storage/FakePersistantCustomer.java:22: error: [NullAway] initializer method does not guarantee @NonNull field customer (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FakePersistantCustomer ( String id, String name, FakePersistantCustomerType custType, String discId ) {
           ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/storage/FakePersistantCustomer.java:27: error: [NullAway] assigning @Nullable expression to @NonNull field
	this.customer = null;
	              ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/storage/FakePersistantProduct.java:23: error: [NullAway] initializer method does not guarantee @NonNull field product (line 21) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FakePersistantProduct(String id, String description, String department, double unitPrice, String discId ) {
           ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/storage/FakePersistantProduct.java:29: error: [NullAway] assigning @Nullable expression to @NonNull field
	this.product = null;
	             ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/storage/FakePersistantDiscount.java:24: error: [NullAway] initializer method does not guarantee @NonNull field discount (line 21) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FakePersistantDiscount(String id, FakePersistantDiscountType discType, String description, int discNumber, double discDouble) {
           ^
    (see http://t.uber.com/nullaway )
../original/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/storage/FakePersistantDiscount.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
	this.discount = null;
	              ^
    (see http://t.uber.com/nullaway )
13 errors
